# QR-Code-Generator

./: .gitignore  README.md  main.py  pyproject.toml  qr_generator.py  requirements.txt
src/: main.py  qr_generator.py
